--- a/slides/css/reveal.css
+++ b/slides/css/reveal.css
@@ -75,6 +75,7 @@ body {
 
 .reveal h1 { font-size: 3.77em; }
 .reveal h1.center { margin-top: 25%; }
+.reveal h2.center { margin-top: 15%; }
 
 .reveal h2 { font-size: 2.11em;	}
 .reveal h3 { font-size: 1.55em;	}
